[gd_scene load_steps=3 format=3 uid="uid://bpo0gmyjrd6cb"]

[ext_resource type="Script" uid="uid://wcokn05uyuef" path="res://scripts/pauseMenu.gd" id="1_hdmo1"]

[sub_resource type="Theme" id="Theme_hdmo1"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hdmo1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.313726)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.6
anchor_right = 0.3
anchor_bottom = 0.9

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme = SubResource("Theme_hdmo1")
text = "Resume"
alignment = 0

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme = SubResource("Theme_hdmo1")
text = "Restart"
alignment = 0

[node name="Options" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme = SubResource("Theme_hdmo1")
text = "Options"
alignment = 0

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme = SubResource("Theme_hdmo1")
text = "Quit
"
alignment = 0

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
